[gd_scene load_steps=4 format=4 uid="uid://cxvxay8qkqx3"]

[ext_resource type="Script" uid="uid://cbpm4ejmempee" path="res://actors/CollectibleGem.gd" id="1_gem"]
[ext_resource type="TileSet" uid="uid://bqxvw4rkqh00i" path="res://content/Tileset.tres" id="2_pvhc6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gem"]
radius = 8.0

[node name="CollectibleGem" type="Area2D"]
z_index = 10
script = ExtResource("1_gem")

[node name="GemSprite" type="ColorRect" parent="."]
visible = false
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0

[node name="GemLabel" type="Label" parent="."]
visible = false
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
theme_override_font_sizes/font_size = 10
text = "ðŸ’Ž"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2.5, 2.5)
shape = SubResource("CircleShape2D_gem")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-39, -24)
scale = Vector2(0.4, 0.4)
tile_map_data = PackedByteArray("AAADAAIADwEBAAIAAAADAAMADwEBAAMAAAADAAQADwEBAAQAAAAEAAEADwECAAEAAAAEAAIADwECAAIAAAAEAAMADwECAAMAAAAEAAQADwECAAQAAAAEAAUADwECAAUAAAAFAAEADwEDAAEAAAAFAAIADwEDAAIAAAAFAAMADwEDAAMAAAAFAAQADwEDAAQAAAAFAAUADwEDAAUAAAAGAAEADwEEAAEAAAAGAAIADwEEAAIAAAAGAAMADwEEAAMAAAAGAAQADwEEAAQAAAAGAAUADwEEAAUAAAAHAAEADwEFAAEAAAAHAAIADwEFAAIAAAAHAAMADwEFAAMAAAAHAAQADwEFAAQAAAAHAAUADwEFAAUAAAAIAAIADwEGAAIAAAAIAAMADwEGAAMAAAAIAAQADwEGAAQAAAA=")
tile_set = ExtResource("2_pvhc6")
